# My-diary-App

./: .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  deploy_diary.md  docker-compose.yml  env.prod.example  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  1552cc48a454_initial_schema.py
backend/src/my_diary/api/: auth.py  deps.py  entries.py  limiter.py  main.py
backend/src/my_diary/core/: logging.py  security.py  settings.py
backend/src/my_diary/db/: models.py  session.py
backend/src/my_diary/models/: entries.py
backend/src/my_diary/schemas/: analytics.py  api.py
backend/src/my_diary/scripts/: promote_user.py
backend/src/my_diary/services/: auth.py  entries.py
backend/tests/: conftest.py  test_smoke.py
frontend/: .dockerignore  .env.production  Dockerfile  next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/journal/[date]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/components/analytics/: MiniHeatmap.tsx  YearHeatmap.tsx
frontend/src/components/calendar/: MonthGrid.tsx
frontend/src/components/sections/: ActivitySection.tsx  CleaningSection.tsx  GroupMeditationSection.tsx  GymSection.tsx  JournalSection.tsx  MeditationSection.tsx  PersonalWatchSection.tsx  SectionCard.tsx  SittingSection.tsx  SleepSection.tsx
frontend/src/components/ui/: Field.tsx  SaveChip.tsx
frontend/src/lib/: api.ts  auth.ts  dates.ts  useAutosave.ts  utils.ts
tmp/: promote_admin.py
